--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,7 +209,7 @@ nav ul li a:hover::after {
 
 .hero .tagline {
     font-size: 1.4rem;
-    font-style: italic;
+    font-family: 'comic sans ms';
     color: #00FF99;
     margin-top: 20px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
