--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,6 +189,7 @@ nav ul li a:hover::after {
     height: 100vh;
     text-align: center;
     padding: 20px;
+    cursor: default;
 }
 
 .hero h1 {
